--- a/Woong_Android/app/src/main/res/layout/fragment_home_egg.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_home_egg.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".home.submenu.HomeFruit">
+    tools:context=".home.submenu.HomeEgg">
     <LinearLayout
         android:id="@+id/linear_filter_fruit"
         android:layout_width="wrap_content"
