--- a/Woong_Android/app/src/main/res/layout/item_bookmark_myproduct.xml
+++ b/Woong_Android/app/src/main/res/layout/item_bookmark_myproduct.xml
@@ -2,20 +2,18 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/rv_item_image"
-    android:layout_width="175dp"
-    android:layout_height="240dp"
+    android:layout_width="160dp"
+    android:layout_height="220dp"
+
+    android:layout_marginBottom="15dp"
+
     android:orientation="vertical">
-    <TextView
-        android:gravity="center"
-        android:background="#ececec"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:text="현듀마켓"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="120dp">
         <ImageView
-            android:id="@+id/img__myproduct"
+            android:id="@+id/iv_bmproductimg_myproduct"
             android:background="#acacac"
             android:layout_width="match_parent"
             android:layout_height="120dp" />
@@ -32,17 +30,43 @@
             android:layout_height="20dp"
             android:background="#000000"/>
     </RelativeLayout>
+    <RelativeLayout
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/sign"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="["/>
+        <TextView
+            android:layout_toRightOf="@+id/sign"
+            android:id="@+id/marketname_bookmark_myproduct"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="현듀마켓"/>
+
+
+        <TextView
+            android:layout_toRightOf="@+id/marketname_bookmark_myproduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="]"/>
+    </RelativeLayout>
+
 
     <TextView
-        android:layout_weight="1"
-        android:layout_marginLeft="10dp"
+        android:id="@+id/productname_bookmark_myproduct"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="돼지 감자"/>
     <RelativeLayout
-        android:layout_weight="1"
-        android:layout_marginLeft="10dp"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -63,15 +87,21 @@
             android:layout_height="wrap_content"
             android:text="당"/>
         <TextView
+            android:id="@+id/cost_bookmark_myproduct"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/dang_bookmark_myproduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="6600원"/>
+            android:text="6600"/>
+        <TextView
+            android:layout_toRightOf="@+id/cost_bookmark_myproduct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="원"/>
     </RelativeLayout>
     <RelativeLayout
-        android:layout_weight="1"
-        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -91,6 +121,8 @@
             android:background="#5fc1ad"
             android:textColor="#ffffff"/>
     </RelativeLayout>
+
+
 
 
 
