--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
@@ -82,13 +82,14 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="성별"/>
-                <Spinner
+                    android:layout_weight="1"
+                    android:text="이름"/>
+                <EditText
                     android:id="@+id/spinner_gender"
                     android:layout_width="0dp"
-                    android:layout_weight="2"
-                    android:layout_height="wrap_content"/>
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF"/>
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
