--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join3.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join3.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="소비자로 등록중입니다."
+            android:text="알러지 설명"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/join1_logo"/>
     </RelativeLayout>
