--- a/Woong_Android/app/src/main/res/layout/fragment_home_grain.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_home_grain.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:context=".home.submenu.HomeGrain">
     <LinearLayout
-        android:id="@+id/linear_filter_fruit"
+        android:id="@+id/linear_filter_grain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -14,21 +14,16 @@
         android:layout_marginRight="30dp"
         android:layout_marginBottom="30dp"
         android:orientation="horizontal">
-        <Button
-            android:layout_width="70dp"
-            android:layout_height="30dp"
-            android:text="이름순"
-            android:background="@color/colorPrimary"/>
-        <Button
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:text="제철식품"
-            android:background="@color/colorPrimaryDark"/>
-        <Button
-            android:layout_width="90dp"
-            android:layout_height="30dp"
-            android:text="사계절식품"
-            android:background="@color/colorPrimary"/>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@color/colorAccent"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginLeft="10dp"
+            android:text="가나다순"/>
     </LinearLayout>
 
 
@@ -271,6 +266,93 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/colorAccent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="버섯"
+                    android:textAlignment="center" />
+            </LinearLayout>
+        </RelativeLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="감자"
+                    android:textAlignment="center" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+
+            android:background="@color/colorAccent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@color/colorPrimary" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="고구마"
+                    android:textAlignment="center" />
+            </LinearLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorPrimaryDark">
 
             <LinearLayout
                 android:layout_width="wrap_content"
