--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Join.ConsumerJoin1Activity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#FFFFFF">
     
     <RelativeLayout
         android:layout_width="match_parent"
@@ -102,6 +103,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <Button
+            android:id="@+id/btn_next_join1"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
