--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join_allergy.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join_allergy.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Join.ConsumerJoin3Activity"
+    tools:context=".Join.Consumer.AllergyActivity"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -153,6 +153,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.7">
         <Button
+            android:id="@+id/btn_complete_allergy"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
