--- a/Woong_Android/app/src/main/res/layout/activity_consumer_terms.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_terms.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Join.ConsumerTermsActivity"
+    tools:context=".Join.Consumer.TermsActivity"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -101,6 +101,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.7">
         <Button
+            android:id="@+id/btn_next_terms"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
