--- a/Woong_Android/app/src/main/res/layout/activity_login.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_login.xml
@@ -9,35 +9,17 @@
 
     <!--귀여운 웅이와 로고-->
     <ImageView
+        android:id="@+id/login_logo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/colorPrimaryDark"/>
 
-    <!--로그인 버튼 2개-->
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/login_frame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerInParent="true">
-            <Button
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:background="@android:color/darker_gray"
-                android:layout_centerInParent="true"
-                android:text="판매자로 로그인"
-                android:textColor="@android:color/black"/>
-            <Button
-                android:layout_marginTop="30dp"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:background="@color/colorPrimaryDark"
-                android:text="소비자로 로그인"
-                android:textColor="#FFFFFF"/>
-        </LinearLayout>
-    </RelativeLayout>
+        android:layout_weight="3"
+        ></FrameLayout>
+
 </LinearLayout>
