--- a/Woong_Android/app/src/main/res/layout/fragment_myproduct_cart.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_myproduct_cart.xml
@@ -4,10 +4,26 @@
     android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_cart_mymarket"
+        android:layout_above="@+id/btn_order_myproduct"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+    <RelativeLayout
+        android:id="@+id/btn_order_myproduct"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:background="#227958"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="주문하기"
+            android:textColor="#ffffff"/>
+    </RelativeLayout>
+
 
 </RelativeLayout>
