회원가입 과정-맵에서 버튼 추가, 마이페이지 프래그먼트로 바꾸고 로그아웃 눌렀을때 로그인 액티비티로 전환, 생년월일 스피너에 들어갈 데이터 string.xml에 넣음, 액티비티에서 스피너와  string.xml 연결

--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
@@ -47,7 +47,7 @@
                     android:id="@+id/spinner_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"/>
+                    android:layout_weight="1.5"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:text="월"/>
                 <Spinner
-                    android:id="@+id/spinner_date"
+                    android:id="@+id/spinner_day"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
