--- a/Woong_Android/app/src/main/res/layout/activity_join_map.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_join_map.xml
@@ -16,13 +16,22 @@
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:layout_width="300dp"
-        android:layout_height="30dp">
+        android:layout_height="30dp"
+        android:background="#FFFFFF">
         <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:text="연세대학교"
+            android:textColor="#000000"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
-
+    
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="이 주소로 지정하기"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
