<카테고리 선택 후 상품, 검색 후 상품, 이주의 농부 레이아웃> 완성

--- a/Woong_Android/app/src/main/res/values/colors.xml
+++ b/Woong_Android/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#237A59</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPastel">#5fc1ad</color>
 </resources>
