--- a/Woong_Android/app/src/main/res/layout/activity_marketer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_marketer_join1.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Join.Consumer.Join2Activity"
-    android:orientation="vertical">
+    tools:context=".Join.Marketer.Join1Activity"
+    android:orientation="vertical"
+    android:background="#FFFFFF">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="소비자로 등록중입니다."
+            android:text="판매자로 등록중입니다."
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/join1_logo"/>
     </RelativeLayout>
@@ -34,58 +35,63 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
-            <RelativeLayout
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="생년월일"/>
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:orientation="horizontal">
+                <Spinner
+                    android:id="@+id/spinner_year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.5"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="이메일"/>
-                <EditText
-                    android:layout_width="200dp"
+                    android:text="년"/>
+                <Spinner
+                    android:id="@+id/spinner_month"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:layout_alignParentRight="true"/>
-            </RelativeLayout>
+                    android:layout_weight="1" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="월"/>
+                <Spinner
+                    android:id="@+id/spinner_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일"/>
+            </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@android:color/darker_gray"/>
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="15dp">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="비밀번호"/>
+                    android:layout_weight="1"
+                    android:text="이름"/>
                 <EditText
-                    android:layout_width="200dp"
+                    android:id="@+id/spinner_gender"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
                     android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:layout_alignParentRight="true"/>
-            </RelativeLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@android:color/darker_gray"/>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="전화번호"/>
-                <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:layout_alignParentRight="true"/>
-            </RelativeLayout>
+                    android:background="#FFFFFF"/>
+            </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
@@ -97,11 +103,11 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <Button
-            android:id="@+id/btn_next_join2"
+            android:id="@+id/btn_next_join1"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:text="다음"
+            android:text="NEXT"
             android:textColor="@android:color/white"
             android:background="@color/colorPrimaryDark"/>
     </RelativeLayout>
