--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
@@ -46,7 +46,8 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_alignParentRight="true"
+                    android:inputType="textEmailAddress"/>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -84,7 +85,8 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_alignParentRight="true"
+                    android:inputType="phone"/>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
