--- a/Woong_Android/app/src/main/res/layout/activity_market_enroll1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_market_enroll1.xml
@@ -29,20 +29,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2.5"
-        android:orientation="vertical">
-
+        android:layout_weight="2.3"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="우리 농장 지역 확인"
+            android:textAlignment="center"
+            android:background="@android:color/darker_gray"/>
         <RelativeLayout
+            android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:id="@+id/map_view"
-            android:layout_width="250dp"
-            android:layout_height="250dp"></RelativeLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="50dp"></RelativeLayout>
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5">
+        android:layout_weight="0.7">
         <Button
             android:id="@+id/btn_next_enroll1"
             android:layout_width="200dp"
