--- a/Woong_Android/app/src/main/res/layout/fragment_login.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_login.xml
@@ -10,6 +10,7 @@ android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_centerInParent="true">
         <Button
+            android:id="@+id/btn_marketer_login"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:background="#FFFFFF"
