--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
@@ -61,7 +61,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="비밀번호"/>
+                    android:text="비밀번호"
+                    android:inputType="textPassword"/>
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
