--- a/Woong_Android/app/src/main/res/layout/activity_market_enroll2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_market_enroll2.xml
@@ -184,7 +184,8 @@
                 </Spinner>
                 <EditText
                     android:layout_width="300dp"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:inputType="number"/>
             </LinearLayout>
         </LinearLayout>
         <Button
