--- a/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
@@ -45,7 +45,8 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_alignParentRight="true"
+                    android:inputType="textEmailAddress"/>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -64,7 +65,8 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:layout_alignParentRight="true"/>
+                    android:layout_alignParentRight="true"
+                    android:inputType="textPassword"/>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -78,7 +80,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="전화번호"/>
+                    android:text="전화번호"
+                    android:inputType="phone"/>
                 <EditText
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
