알림 하단탭 - 메세지탭 내부 구현완료

--- a/Woong_Android/app/src/main/res/layout/fragment_notice_message.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_notice_message.xml
@@ -27,6 +27,7 @@
                     android:text="NEW"/>
             </RelativeLayout>
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_new_message"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="false"/>
@@ -46,6 +47,7 @@
                         android:text="읽은 메세지"/>
                 </RelativeLayout>
                 <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_old_message"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:nestedScrollingEnabled="false"/>
