판매자 마켓 상품 디테일, 앨범 뷰 구현

--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Join.Consumer.Join2Activity"
+    tools:context=".join.consumer.Join2Activity"
     android:orientation="vertical">
 
     <RelativeLayout
