--- a/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_consumer_join1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Join.Consumer.Join1Activity"
+    tools:context=".join.consumer.Join1Activity"
     android:orientation="vertical"
     android:background="#FFFFFF">
     
