--- a/Woong_Android/app/src/main/res/layout/activity_login.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login.LoginActivity">
+    tools:context=".login.LoginActivity">
 
     <!--귀여운 웅이와 로고-->
     <ImageView
