--- a/Woong_Android/app/src/main/res/layout/activity_market_enroll2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_market_enroll2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Join.Marketer.Market.Enroll2Activity">
+    tools:context=".join.marketer.market.Enroll2Activity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
