--- a/Woong_Android/app/src/main/res/layout/activity_market_enroll3.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_market_enroll3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".Join.Marketer.Market.Enroll3Activity">
+    tools:context=".join.marketer.market.Enroll3Activity">
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="400dp"
