--- a/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_marketer_join2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Join.Marketer.Join2Activity">
+    tools:context=".join.marketer.Join2Activity">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
