--- a/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_sellermarket.xml
@@ -183,6 +183,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </android.support.v4.view.ViewPager>
+            <FrameLayout
+                android:id="@+id/frame_sellermarket"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></FrameLayout>
+
         </LinearLayout>
     </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
