--- a/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_sellermarket_review.xml
@@ -3,4 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@color/colorPrimaryDark"/>
+
+    </LinearLayout>
 </LinearLayout>
