--- a/Woong_Android/app/src/main/res/layout/fragment_marketer_top.xml
+++ b/Woong_Android/app/src/main/res/layout/fragment_marketer_top.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.woong.woong_android.seller_market.SellerMarketActivity">
+    android:fitsSystemWindows="true">
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar_sellermarket"
+        android:id="@+id/appbar_marketer"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:fitsSystemWindows="true"
@@ -26,12 +25,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <RelativeLayout
-                    android:id="@+id/relative_top_sellermarket"
+                    android:id="@+id/relative_top_marketer"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:background="#e6e6e6">
                     <TextView
-                        android:id="@+id/tv_name_sellermarket"
+                        android:id="@+id/tv_name_marketer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/colorPrimaryDark"
@@ -44,11 +43,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        android:layout_below="@+id/tv_name_sellermarket"
+                        android:layout_below="@+id/tv_name_marketer"
                         android:layout_marginTop="10dp"
                         android:orientation="horizontal">
                         <TextView
-                            android:id="@+id/tv_tag2_sellermarket"
+                            android:id="@+id/tv_tag2_marketer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingTop="3dp"
@@ -59,7 +58,7 @@
                             android:background="@color/colorPastel"
                             android:text="#무료배송"/>
                         <TextView
-                            android:id="@+id/tv_tag1_sellermarket"
+                            android:id="@+id/tv_tag1_marketer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingTop="3dp"
@@ -81,26 +80,26 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tv_withme_sellermarket"
+                            android:id="@+id/tv_withme_marketer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="나와의 거리는 " />
 
                         <TextView
-                            android:id="@+id/tv_distance_sellermarket"
+                            android:id="@+id/tv_distance_marketer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="10km"
                             android:textColor="@color/colorPrimaryDark" />
 
                         <TextView
-                            android:id="@+id/tv_is_sellermarket"
+                            android:id="@+id/tv_is_marketer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=" 입니다" />
                     </LinearLayout>
                     <ImageButton
-                        android:id="@+id/ib_bookmark_sellermarket"
+                        android:id="@+id/ib_bookmark_marketer"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:background="@color/colorPastel"
@@ -109,13 +108,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/ib_bookmark_sellermarket"
-                        android:layout_toRightOf="@id/ib_bookmark_sellermarket"
+                        android:layout_alignBottom="@+id/ib_bookmark_marketer"
+                        android:layout_toRightOf="@id/ib_bookmark_marketer"
                         android:layout_marginBottom="10dp"
                         android:text="70개"
                         android:textColor="@color/colorPrimaryDark" />
                     <ImageButton
-                        android:id="@+id/ib_message_sellermarket"
+                        android:id="@+id/ib_message_marketer"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:background="@color/colorPastel"
@@ -124,8 +123,8 @@
                         android:layout_margin="10dp"/>
                 </RelativeLayout>
                 <View
-                    android:id="@+id/view_no_sellermarket"
-                    android:layout_below="@id/relative_top_sellermarket"
+                    android:id="@+id/view_no_marketer"
+                    android:layout_below="@id/relative_top_marketer"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"/>
 
@@ -142,7 +141,7 @@
                         android:layout_height="110dp" />
 
                     <ImageView
-                        android:id="@+id/iv_profile_sellermarket"
+                        android:id="@+id/iv_profile_marketer"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:src="@drawable/ic_launcher_foreground"
@@ -150,7 +149,7 @@
                 </LinearLayout>
             </RelativeLayout>
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/toolbar_marketer"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 app:layout_collapseMode="pin"
@@ -161,7 +160,7 @@
 
 
     <FrameLayout
-        android:id="@+id/frame_sellermarket"
+        android:id="@+id/frame_marketer"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
@@ -172,7 +171,7 @@
             android:orientation="vertical">
 
             <android.support.design.widget.TabLayout
-                android:id="@+id/tab_top_sellermarket"
+                android:id="@+id/tab_top_marketer"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@color/colorPrimaryDark"
@@ -180,8 +179,8 @@
                 android:clipToPadding="false"
                 android:elevation="4dp"></android.support.design.widget.TabLayout>
             <android.support.v4.view.ViewPager
-                android:layout_below="@+id/tab_top_sellermarket"
-                android:id="@+id/viewpager_sellermarket"
+                android:id="@+id/viewpager_marketer"
+                android:layout_below="@+id/tab_top_marketer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </android.support.v4.view.ViewPager>
