액티비티 연결 수정 및 결제실패 다이얼로그 추가

--- a/Woong_Android/app/src/main/res/layout/activity_market_enroll1.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_market_enroll1.xml
@@ -43,11 +43,24 @@
         <RelativeLayout
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            android:id="@+id/map_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="50dp">
+            <RelativeLayout
+                android:id="@+id/market_map_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </RelativeLayout>
+            <ImageView
+                android:id="@+id/btn_currentloc_marketer"
+                android:layout_alignParentRight="true"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@color/colorPastel"/>
         </RelativeLayout>
+
+
     </LinearLayout>
 
     <RelativeLayout
