--- a/Woong_Android/app/src/main/res/layout/activity_enroll1_search.xml
+++ b/Woong_Android/app/src/main/res/layout/activity_enroll1_search.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".join.marketer.market.Enroll1SearchActivity"
-    android:orientation="vertical">
+    tools:context=".map.location_change.LocationSearchChangeActivity"
+    android:background="#ffffff">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="#FFFFFF">
         <ImageButton
-            android:id="@+id/btn_back_market_location_search"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@color/colorPrimaryDark"
@@ -31,7 +30,7 @@
         android:layout_height="50dp"
         android:background="#FFFFFF">
         <ImageView
-            android:id="@+id/iv_searchback_main"
+            android:id="@+id/iv_markter_searchback_main"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginHorizontal="10dp"
@@ -39,35 +38,49 @@
             android:layout_centerHorizontal="true"
             android:background="#EDEDED"/>
 
-        <TextView
-            android:id="@+id/tv_search_main"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="25dp"
-            android:textColor="#9B9B9B"
-            android:textSize="11sp"
-            android:text="홍익대학교"/>
+            android:layout_marginLeft="25dp">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:background="@color/colorPrimaryDark"/>
+            <EditText
+                android:id="@+id/et_marketer_search_main"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:layout_width="300dp"
+                android:layout_height="30dp"
+                android:textColor="#9B9B9B"
+                android:textColorHint="#bcbcbc"
+                android:textSize="11sp"
+                android:inputType="text"
+                android:hint="지번,도로명,건물명으로 검색"
+                android:imeOptions="actionSearch"
+                android:background="@null"/>
+        </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/iv_searchico_main"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_toLeftOf="@+id/tv_search_main"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:background="@color/colorPrimaryDark"/>
+
+
     </RelativeLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:padding="10dp"
         android:textColor="@color/colorPrimaryDark"
-        android:text="주소 검색 결과 '홍익대학교'"/>
+        android:text="주소 검색 결과"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_result_location_search"
+        android:id="@+id/rv_result_markter_location_search"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+
 </LinearLayout>
